<resources>
    <string name="app_name" translatable="false">Flowify</string>
    <string name="splash_screen_icon" translatable="false">splash screen icon</string>
    <string name="board_image" translatable="false">board image</string>
    <string name="intro_screen_description_text">Collaborate and Plan Together Across Multiple Devices on Flowify\'s Minimalistic Interface</string>
    <string name="intro_screen_subtitle_size">Let\'s Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_screen_password_hint">Please enter your password</string>
    <string name="signup_screen_email_hint">Please enter your email</string>
    <string name="signup_screen_name_hint">Please enter your name</string>
    <string name="signup_screen_title">Enter your name, email ID and password to register with us</string>
    <string name="signup_screen_name_invalid">User name is required</string>
    <string name="signup_screen_email_invalid">User email is required</string>
    <string name="signup_screen_password_invalid">User password is required</string>
    <string name="signup_screen_submit_error">Something went wrong with your sign-up, please try again.</string>
    <string name="loading">Please wait …</string>
    <string name="signin_screen_submit_error">Something went wrong with your sign in, please try again.</string>

    <string name="signin_screen_email_hint">Please enter your email</string>
    <string name="signin_screen_password_hint">Please enter your password</string>
    <string name="signin_screen_email_invalid">User email is required and must be valid</string>
    <string name="signin_screen_password_invalid">User password is required and must have at least 6 character</string>

    <string name="menu_home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_alert_dialog_message">Are you sure you want to sign out?</string>
    <string name="account_image">account image</string>
    <string name="menu_account">Account</string>
    <string name="account_fragment_email">Email</string>
    <string name="account_fragment_name">Name</string>
    <string name="account_fragment_phone_number">Phone Number</string>
    <string name="account_fragment_button">Update</string>
    <string name="account_fragment_phone_number_error">Phone is required and must be a number with 9 digits</string>
    <string name="account_fragment_name_error">Name is required</string>
    <string name="account_fragment_submit_error">An error occurred while updating the profile. Please check your information.</string>
    <string name="account_fragment_picture_error">The picture is required and must be a valid link</string>
    <string name="account_fragment_permission_title">Permission needed</string>
    <string name="account_fragment_permission_text">The selection image permission is required to select a profile picture.</string>
    <string name="account_fragment_permission_denied">Permission denied</string>
    <string name="error_updating_user_information">Error updating user information: %1$s</string>
    <string name="account_fragment_image_error">An error occurred while saving the profile picture.</string>
    <string name="home_activity_user_error">An error occurred while getting the current user information</string>
    <string name="account_fragment_file_error">An error occurred while getting an image for profile</string>
    <string name="custom_alert_dialog_title">Are you sure ?</string>
    <string name="custom_alert_dialog_subtitle">Do you really want to go back ?</string>
    <string name="custom_alert_dialog_button_positive">Yes</string>
    <string name="custom_alert_dialog_button_negative">No</string>
    <string name="create_board_activity_toolbar_title">Create Board</string>
    <string name="create_board_activity_name">Board Name</string>
    <string name="create_board_activity_button">Create</string>
    <string name="create_board_activity_invalid_name">You must provide a name</string>
    <string name="create_board_activity_invalid_picture">Please choose a valid picture for your new board</string>
    <string name="create_board_activity_permission_required">The selection of board image required permission to select an image from your phone gallery. Please enable the permission in your phone settings</string>
    <string name="create_board_activity_permission_denied">Something went wrong when you were picking a nice picture for your board.</string>
    <string name="create_board_activity_error">An error occurred while creating the board. Please check your information.</string>
    <string name="account_fragment_user_error">User not found. Please log in.</string>
    <string name="menu_boards">Boards</string>
    <string name="boards_fragment_error_fetching_boards">An error occurred while fetching your list of boards</string>
    <string name="boards_fragment_no_boards_found">No boards found</string>
    <string name="create_board_activity_error_picture">An error occurred while processing the image you picked from gallery</string>
    <string name="details_board_activity_toolbar_title">Board Details</string>
    <string name="details_board_activity_invalid_board">Board not found</string>
    <string name="details_board_activity_state_error">An error occurred while fetching board details</string>
    <string name="details_board_activity_no_boards_found">No tasks found</string>
    <string name="activity_details_board_title_input">Title</string>
    <string name="activity_details_board_description_input">Description</string>
    <string name="activity_details_board_create_task_button">Create Task</string>
    <string name="details_board_activity_invalid_task">An error occurred while creating a new task</string>
    <string name="details_board_activity_create_task_error">An occurred while creating a new task</string>
    <string name="details_board_activity_create_task_success">Task with title %1$s created successfully</string>
    <string name="menu_tasks">Tasks</string>
    <string name="tasks_fragment_no_tasks_found">No Tasks Found</string>
    <string name="tasks_image">Task Image\n</string>
    <string name="tasks_fragment_error_fetching_tasks">An error occurred while fetching all your tasks</string>
    <string name="activity_membership_assign_task_button">Assign User</string>
    <string name="activity_membership_assign_input">User Email</string>
    <string name="details_board_activity_invalid_email">Please provide a valid user email</string>
    <string name="details_board_activity_assign_user_error">An error occurred while assigning the user</string>
    <string name="membership">Member</string>
    <string name="membership_activity_toolbar_title">Membership</string>
    <string name="activity_membership_no_membership_found">No members found</string>
    <string name="profile_image">Profile Picture</string>
    <string name="activity_membership_assign_task_invalid">Please you must enter a valid email</string>
    <string name="activity_membership_get_members_error">"An error occurred while fetching board members "</string>
    <string name="activity_membership_assign_board_error">An error occurred while assigning a new member to the board</string>
    <string name="activity_membership_assign_board_success">User with name %1$s assigned successfully</string>
    <string name="activity_membership_delete_board_success">Member with name %1$s was removed successfully</string>
    <string name="activity_membership_delete_board_error">An error occurred while deleting the member from the board</string>
    <string name="plus_task">Create Task</string>
    <string name="assign_user">Assign User</string>
</resources>