<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthenticationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_board"
        android:layout_width="@dimen/intro_screen_image_size"
        android:layout_height="@dimen/intro_screen_image_size"
        android:layout_margin="@dimen/regular_margin"
        android:contentDescription="@string/board_image"
        android:src="@drawable/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:gravity="center_horizontal"
        android:text="@string/intro_screen_subtitle_size"
        android:textSize="@dimen/intro_screen_subtitle_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_board" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_subtitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/intro_screen_line_spacing"
        android:text="@string/intro_screen_description_text"
        android:textSize="@dimen/intro_screen_subtitle_1_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_in"
        app:icon="@drawable/login"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceLargeComponent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_up"
        app:icon="@drawable/person_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceLargeComponent" />


</androidx.constraintlayout.widget.ConstraintLayout>